--- a/Lektion13/Opgave13.1/Dockerfile
+++ b/Lektion13/Opgave13.1/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:alpine
-COPY . /usr/share/nginx/html/opgave13.1.html
+COPY . /usr/share/nginx/html/
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
